# dpkg-profiler

./: .env.template  Makefile  README.md  docker-compose.yaml
backend/: Dockerfile  pyproject.toml
backend/src/: main.py
backend/src/api/common/: dependencies.py
backend/src/api/v1/routers/: package_routers.py
backend/src/api/v1/schemas/: package_schemas.py
backend/src/config/: base.py
backend/src/database/sqlite/: core.py  handler.py
backend/src/models/: package_models.py
backend/src/utils/: parser.py
backend/tests/: conftest.py
backend/tests/api/v1/routers/: test_package_routers.py
backend/tests/database/sqlite/: test_core.py  test_handler.py
backend/tests/utils/: test_parser.py
frontend/: Dockerfile  pyproject.toml
frontend/src/: main.py
frontend/src/config/: base.py
