[tool.poetry]
name = "dpkg-profiler-frontend"
version = "0.1.0"
description = ""
authors = ["Koosha Sangari <ko.sangari@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.31.1"
httpx = "^0.27.0"
pydantic-settings = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
